motorcycle detail page + contact page submit button visibility bug

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -32,6 +32,12 @@ h2 {
   color: #fff;
 }
 
+h3 {
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: #fff;
+}
+
 p {
   font-size: 1.2rem;
   color: #fff;
